Closed Bug 885214 Opened 11 years ago Closed 11 years ago

Fix a used-but-not-defined warning in IonMonkey.

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla24

People

(Reporter: n.nethercote, Assigned: n.nethercote)

Details

Attachments

(1 file)

I'm seeing this with GCC on Linux:

In file included from ../ion/shared/Lowering-x86-shared.h:10:0,
                 from /home/njn/moz/mi3/js/src/ion/x64/Lowering-x64.h:10,
                 from /home/njn/moz/mi3/js/src/ion/Lowering.h:20,
                 from /home/njn/moz/mi3/js/src/ion/RegisterAllocator.h:17,
                 from /home/njn/moz/mi3/js/src/ion/StupidAllocator.h:10,
                 from /home/njn/moz/mi3/js/src/ion/StupidAllocator.cpp:7:
../ion/shared/Lowering-shared.h:104:24: warning: inline function ‘js::ion::LDefinition js::ion::LIRGeneratorShared::temp(js::ion::LDefinition::Type, js::ion::LDefinition::Policy)’ used but never defined [enabled by default]

I think bug 880471 is the cause.  LIRGeneratorShared::temp() is defined in
Lowering-shared-inl.h and used in Lowering-x64.h, which is bad -- .h files
shouldn't use things from -inl.h files.
This fixes it by moving temp() from the -inl.h file to the .cpp file.  I
suspect the non-inlining of this function won't be noticed.
Attachment #765204 - Flags: review?(hv1989)
Comment on attachment 765204 [details] [diff] [review]
Fix a used-but-not-defined warning in IonMonkey.

Review of attachment 765204 [details] [diff] [review]:
-----------------------------------------------------------------

Thanks! That was indeed wrong.
Attachment #765204 - Flags: review?(hv1989) → review+
https://hg.mozilla.org/mozilla-central/rev/8ff0ea9bb4b0
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: