Bug 885214 - Fix a used-but-not-defined warning in IonMonkey.  r=h4writer.