js/src/ion/x64/Lowering-x64.cpp
@@ -36,6 +36,12 @@ LIRGeneratorX64::useBoxFixed(LInstruction *lir, size_t n, MDefinition *mir, Regi
     return true;
 }
 
+LDefinition
+LIRGeneratorX64::tempToUnbox()
+{
+    return temp();
+}
+
 bool
 LIRGeneratorX64::visitBox(MBox *box)
 {
