js/src/ion/x64/Lowering-x64.h
@@ -28,9 +28,7 @@ class LIRGeneratorX64 : public LIRGeneratorX86Shared
                 LUse::Policy policy = LUse::REGISTER, bool useAtStart = false);
     bool useBoxFixed(LInstruction *lir, size_t n, MDefinition *mir, Register reg1, Register);
 
-    inline LDefinition tempToUnbox() {
-        return temp();
-    }
+    LDefinition tempToUnbox();
 
     LGetPropertyCacheT *newLGetPropertyCacheT(MGetPropertyCache *ins);
 
